--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,9 @@
     <link rel="apple-touch-icon" href="/logo222.png" />
     
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7891858958918212"
+     crossorigin="anonymous"></script>
     
     <title>Rádio Famílias On-line</title>
   </head>
